force-app/main/default/objects/datamask__Masking_Configuration__c/fields/datamask__Current_Execution_Id__c.field-meta.xml
<CustomField>
    <fullName>datamask__Current_Execution_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Execution Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>