force-app/main/default/objects/datamask__Masking_Configuration__c/fields/datamask__Language__c.field-meta.xml
<CustomField>
    <fullName>datamask__Language__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>